@@ -291,3 +291,29 @@ En linux no sale del emulador... quiza es algo de sdl? si, parece que vo sdl con
 pulsar en cualquiera de las ventanas o en el logo Z-> esto retorna el foco siempre en la ultima ventana antes de perder el foco
 
 * logo Z solo se ve cuando capa de menu esta abierta (esto aplica aunque no haya background windows)
+
+* First aid de nuevas ventanas en background. Creo que ya está??
+
+* Imágenes next 128 y 512 mb
+
+http://www.zxspectrumnext.online/cspect/
+
+
+* Si no hay multitarea no se debería poder tener ventanas en background?
+
+
+*ventanas minimizadas no redibuja siempre, dado que solo tienen titulo sin contenido. Solventar redibujado de ventana - titulo con las que estan en background
+
+
+*Meter file browser zxuno en imagen zxuno mmc
+
+https://spectrumcomputing.co.uk/forums/viewtopic.php?t=2553
+
+
+*Solo guardar ventanas que permitan allow_background. ya se hace asi?
+
+* documento en extras de como instalar aplicaciones cp/m. con ejemplo de wordstar
+
+*meter en extras de docs Benchmark legacy tbblue
+
+*inicializacion bufferes border, etc hacerlo con memset para consumir menos cpu
