@@ -28,6 +28,7 @@ Improved TBBlue emulation:
 -Enable Timex video by default
 -Added altrom feature: now 48k and 128k mode works again
 -Legacy hi-res and border effects disabled by default. Reduces up to 13% cpu use or gain 17 FPS on my environment
+-Emulate register 0x8E (142) => Spectrum 128K Memory Mapping
 
 Improved debugging:
 -Added breakpoint action "reset-tstatp"
